out/extraction_178117.err
Traceback (most recent call last):
  File "dpicl-pmixed.py", line 13, in <module>
    from pmixedcopy import PMixED
  File "/home/woodygan/DP-ICL/pmixedcopy.py", line 327
    def priv_generate(self, context, gram_length, question, max_length, temperature=1,0, top_k=None,min_length=15, tokenwise=True, endtoend=True, split=1):
                                                                                      ^
SyntaxError: invalid syntax
